<resources>
    <string name="app_name">CyberCampus++</string>

    <string name="LoginLayout_EmailHint">Email</string>
    <string name="LoginLayout_doLogin">Login</string>
    <string name="LoginLayout_FindPW">FORGOT PASSWORD?</string>

    <string name="LoginActivity_Title">LOGIN</string>
    <string name="LoginActivity_Greeting">Hello</string>
    <string name="LoginActivity_Description">Enter your ID and password.</string>
    <string name="LoginActivity_HintID">ID</string>
    <string name="LoginActivity_doLogin">Login</string>
    <string name="LoginActivity_AutoLogin">Auto Login</string>
    <string name="LoginActivity_HintPW">Password</string>

    <string name="LoginActivity_LoginNoResponse">Error: No response on login request</string>
    <string name="LoginActivity_LoginOnFailure">Error: Failure on login: %1$s</string>
    <string name="LoginActivity_LoginSuccess">Welcome %1$s</string>
    <string name="LoginActivity_LoginIncorrect">Incorrect ID or password. Please try again.</string>
    <string name="LoginActivity_LoginParseError">Error on data parsing: %1$s</string>

    <string name="MainActivity_Footer_Lecture">Lecture</string>
    <string name="MainActivity_Footer_Schedule">Schedule</string>
    <string name="MainActivity_Footer_Alarm">Alarm</string>
    <string name="MainActivity_Footer_Chat">Chat</string>
    <string name="MainActivity_Footer_Setting">Setting</string>

    <string name="LoadingDialog_TextLogin">Logging in…</string>
    <string name="LoadingDialog_TextLoading">Loading…</string>

    <string name="MainFragment_Lecture_Title">Lecture</string>
    <string name="MainFragment_Schedule_Title">Schedule</string>
    <string name="MainFragment_Alarm_Title">Alarm</string>
    <string name="MainFragment_Chat_Title">Chat</string>
    <string name="MainFragment_Setting_Title">Setting</string>

    <string name="LectureActivity_notify">Notification</string>
    <string name="LectureActivity_current">Current Week Course</string>
    <string name="LectureActivity_weekly">All Week Course</string>

    <string name="LectureActivity_elem_week">%1$sWeek</string>
    <string name="LectureActivity_elem_period">%1$s %2$s - %3$s %4$s</string>

    <string name="LectureActivity_assignment">Assignment</string>

    <string name="ChatActivity_submit">Submit</string>
    <string name="DeadlineActivity_Context_Empty">No activity</string>

    <string name="ChatActivity_Hint">Message Input</string>
    <string name="ChatActivity_Hint_Unable">Unable to chat in group chat</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

</resources>