<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp">

    <TextView
        android:id="@+id/label_notify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/LectureActivity_notify"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <GridView
        android:id="@+id/element_list_notify"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/style_rect"
        android:numColumns="3"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_notify" />

    <TextView
        android:id="@+id/label_current"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/LectureActivity_current"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/element_list_notify" />

    <GridView
        android:id="@+id/element_list_current"
        android:layout_width="wrap_content"
        android:layout_height="124dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/style_rect"
        android:numColumns="3"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_current" />

    <TextView
        android:id="@+id/label_weekly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/LectureActivity_weekly"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/element_list_current" />

    <GridView
        android:id="@+id/element_list_weekly"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/style_rect"
        android:numColumns="3"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_weekly" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:src="@drawable/baseline_account_circle_18"
        android:tint="@color/gcc_green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>